Added missing colons in shortcut list

--- a/sample.html
+++ b/sample.html
@@ -30,9 +30,9 @@
 					<li><b>Rewind 30 seconds:</b> ctrl+h</li>
 					<li><b>Fast forward 30 seconds:</b> ctrl+l</li>
 					<li><b>Jump to beginning:</b> ctrl+0</li>
-					<li><b>Jump to end</b> ctrl+9</li>
-					<li><b>Increase volume</b> ctrl+1</li>
-					<li><b>Decrease volume</b> ctrl+2</li>
+					<li><b>Jump to end:</b> ctrl+9</li>
+					<li><b>Increase volume:</b> ctrl+1</li>
+					<li><b>Decrease volume:</b> ctrl+2</li>
 				</ul>
 			</small>
 		</article>
